Kuber/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
#          readinessProbe:
#            exec:
#              command: ["sh", "-c", "pg_isready -U \"$POSTGRES_USER\" -d \"$(POSTGRES_DB)\""]
#            initialDelaySeconds: 5
#            periodSeconds: 5
#            timeoutSeconds: 3
#            failureThreshold: 3
#          livenessProbe:
#            exec:
#              command: ["sh", "-c", "pg_isready -U \"$POSTGRES_USER\" -d \"$(POSTGRES_DB)\""]
#            initialDelaySeconds: 15
#            periodSeconds: 10
#            timeoutSeconds: 3
#            failureThreshold: 3
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
